Changes to env.  Currently non-working
